--- a/src/app/components/styles/hero.css
+++ b/src/app/components/styles/hero.css
@@ -1,5 +1,5 @@
 .jeans{
-    background-image: url(/imgs/jeans/negro.jpg);
+    background-image: url(/imgs/jeans/negroimproved.jpg);
     background-size: cover;       /* Asegura que la imagen cubra todo el div */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     background-position: center;
