--- a/src/app/components/styles/group.css
+++ b/src/app/components/styles/group.css
@@ -1,5 +1,5 @@
 .group{
-    background-image: url(/imgs/negocio/panorama.jpg);
+    background-image: url(/imgs/negocio/panoramarecorted.jpg);
     background-size: cover;       /* Asegura que la imagen cubra todo el div */
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     background-position: center;
