--- a/src/app/components/styles/jeans.css
+++ b/src/app/components/styles/jeans.css
@@ -12,5 +12,5 @@ h1{
 }
 .grid-container{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
 }
